# bare-metal-manager-core

./: Cargo.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  promotion.yaml
crates/admin-cli/src/: rpc.rs
crates/admin-cli/src/instance/show/: cmd.rs
crates/api-db/src/: explored_endpoints.rs  instance_address.rs  machine_topology.rs
crates/api-model/src/: os.rs
crates/api/src/: api.rs  ethernet_virtualization.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/handlers/: component_manager.rs  rack_firmware.rs
crates/api/src/tests/: instance_os.rs  machine_states.rs  vpc_peering.rs
crates/api/src/tests/common/api_fixtures/: mod.rs
crates/api/src/web/: instance.rs
crates/dhcp/src/: mock_api_server.rs
crates/dhcp/src/kea/: callouts.cc  callouts.h  carbide_logger.cc  carbide_logger.h  loader.cc
crates/dhcp/tests/: lease4_hook_test.rs
crates/dhcp/tests/common/: dhcp_factory.rs  kea.rs  mod.rs
crates/health/src/endpoint/: model.rs
crates/health/src/sink/: events.rs  prometheus.rs
crates/imagecache/: Cargo.toml
crates/imagecache/src/: cache_loop.rs  config.rs  create_os.rs  gc.rs  keys.rs  list_os.rs  local_storage.rs  main.rs  s3.rs  storage.rs
crates/imagecache/src/create_os/: app.rs  download_hash.rs  form.rs  input.rs  review.rs  template_select.rs  ui.rs
crates/rpc/: build.rs
crates/rpc/proto/: forge.proto
crates/secrets/src/: forge_vault.rs
pxe/common_files/: load_modules.sh
pxe/mkosi.profiles/scout-oss-x86_64/: mkosi.finalize.chroot  mkosi.postinst.chroot
