#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-imagecache"
version = "0.0.1"
description = "Carbide OS artifact caching service - downloads and caches OS artifacts to S3-compatible storage"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-imagecache"
path = "src/main.rs"

[[bin]]
name = "carbide-imagecache-clear-urls"
path = "src/clear_urls.rs"

[[bin]]
name = "carbide-imagecache-create-os"
path = "src/create_os.rs"

[[bin]]
name = "carbide-imagecache-list-os"
path = "src/list_os.rs"

[dependencies]
# [begin-local-dependencies]
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-version = { path = "../version" }
# [end-local-dependencies]

axum = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
futures = { workspace = true }
hex = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
rust-s3 = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
